added a main division aand in it include a paragraph text. Also updated CSS file to add background,margin,padding  and font size for the body of the html and header and main.

--- a/assignment/assignment5.2.css
+++ b/assignment/assignment5.2.css
@@ -9,6 +9,7 @@ body {
 .container {
     background-color: rgb(208, 102, 166);
     margin-bottom:3%;
+    font-size: large;
 }
 
 header {
@@ -19,5 +20,7 @@ text-align: center; /* Center the text in the header. */
 
 main { 
     background-color: lightgrey;/* Give the main a light grey background color. */
-padding: 1em;
+    padding: 1em;
+    font-size: large;
+
 }
